# fidmag

./: Cargo.toml
src/: fill_buffer.wgsl  gfx_ctx.rs  line.wgsl  main.rs  particle.wgsl  shader.wgsl  simulation.wgsl
src/gfx_ctx/: line.rs  vertex.rs
